style.css
/* Basic Style */

.page {
  background-color: #f8f8f8;
  color: #333;
  font-family: Lato, sans-serif;
}

.header {
  width: 500px;
  margin: 0 auto;
  display: block;
  text-align: right;
}

.header__img {
  width: 100%;
}

.link {
  font-family: fantasy, cursive;
}

@media (max-width:768px) {

  .header {
    text-align: center;
  }

}

.main {
  display: block;
  width: 500px;
  margin: 0 auto 0;
}

.input_text,
.label_task {
  width: 56%;
  display: inline-block;
  flex-grow: 1;
}

.row-wrapper {
  display: flex;
}

.list {
  margin: 0;
  padding: 0px;
}

.list__item, .title {
  list-style: none;
}

.input, .button {
  outline: none;
}

.button {
  background: none;
  border: 0px;
  color: #888;
  font-size: 15px;
  width: 60px;
  font-family: Lato, sans-serif;
  cursor: pointer;
}

.button:hover {
  color: #3a3a3a;
}


/* Heading */

.title,
.label_section1 {
  color: #333;
  font-weight: 700;
  font-size: 15px;
  border-bottom: 2px solid #333;
  padding: 30px 0 10px;
  margin: 0;
  text-transform: uppercase;
}

.input_text{
  margin: 0;
  font-size: 18px;
  line-height: 18px;
  height: 21px;
  padding: 0 9px;
  border: 1px solid #ddd;
  background: #fff;
  border-radius: 6px;
  font-family: Lato, sans-serif;
  color: #888;
}

.input_text:focus {
  color: #333;
}


/* New Task */

.label_section1 {
  display: block;
  margin: 0 0 20px;
}

.input_section1 {
  width: 318px;
}


/* Task list */

.list__item {
  overflow: hidden;
  padding: 20px 0;
  border-bottom: 1px solid #eee;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.list__item>* {
  vertical-align: middle;
}

.input_checkbox {
  margin: 0 10px;
}

.label_task {
  padding-left: 10px;
  box-sizing: border-box;
  font-size: 18px;
  width: 226px;
}

.item__input {
  width: 226px;
}

.button__img {
  height: 2em;
  transform: rotateZ(45deg);
  transition: transform 200ms ease-in;
}

.button__img:hover {
  transform: rotateZ(0);
}


/* Completed */

.label_completed {
  text-decoration: line-through;
  color: #888;
}


/* Edit Task */

.item__input.input_text{
  display: none;
}

.input_text.input_text_on-edit {
  display: inline-block;
  width: 224px;
}

.label_on-edit {
  display: none;
}

